# amazing

./: .gitignore  Makefile  README.md  a_maze_ing.py  config.txt  confvalidator.py  drowed.py  drowmaze.py  getpath.py  invenvcheck.py  main.py  maze.py  maze.txt  mazecrate.py  mazemaze.py  output_maze.txt  pyproject.toml  writefile.py
mazegen/: a_maze_ing.py  confvalidator.py  drowed.py  getpath.py  mazemaze.py  writefile.py
