[tool.poetry]
name = "mazegen"
version = "1.0.0"
description = "Maze generation package for 42 curriculum"
authors = ["rafhovha, ststepan"]
readme = "README.md"
packages = [{include = "mazegen"}]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
mypy = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"